[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MpesaRest"
version = "0.0.6"
authors = [
  { name="Lumuli Ken Reagan", email="lumulikenreagan@gmail.com" },
]
description = "An interaction of the Safaricom Daraja Api with Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
      "Intended Audience :: Developers",
      "Programming Language :: Python",
      "Operating System :: OS Independent"
    ]

[project.urls]
"Homepage" = "https://github.com/kenreagan/MpesaRestt"
"Bug Tracker" = "https://github.com/kenreagan/MpesaRest/issues"

[tool.setuptools]
packages = ['MpesaRest']